# studio-mcp

./: .env.example  .gitignore  CHANGELOG.md  INTEGRATION.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
console/: .gitignore  PLAN.md  README.md  package-lock.json  package.json
console/app/: globals.css  layout.tsx  page.tsx
console/app/api/director/: route.ts
console/app/api/mcp/: route.ts
console/components/: Director.tsx  InvokeForm.tsx
console/lib/: mcp-client.ts  result.ts  types.ts
console/lib/demo/: results.ts  tools.json
eval/: PLAN.md  run_benchmark.py  scorers.py  tasks.json
scripts/: smoke_chain.py  smoke_live.py  smoke_offline.py  verify_animate.py  verify_pipeline.py
studio_mcp/: __init__.py  lf.py  llm.py  obs.py  prompts.py  render.py  server.py  state.py
studio_mcp/orchestration/: PLAN.md  __init__.py  __main__.py  graph.py  sdk_planner.py
tests/: test_eval.py  test_orchestration.py  test_pipeline.py
